src/index.css
@import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:300,400,700');
@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i');
@import 'css/bootstrap-grid.min.css';
body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    overflow-x: hidden;
}

h1,
h2,
h3,
h4,
h5,
h6,
h7 {
    font-weight: 300;
}

h1 {
    font-size: 3em;
}

.fullscreen {
    width: 100vw;
    height: 100vh;
}

.fullscreen-container {
    width: 100vw;
    height: 100vh;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

a{
    color: #4DA3FF;
    font-weight: 400;
    text-decoration: none;
}

a:hover{
    color: #0056b3;
    text-decoration: underline;
}

.navbar {
    padding-top: 17px;
}
.no-select {
    pointer-events: none;
    -webkit-touch-callout: none;
    /* iOS Safari */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
    user-select: none;
    /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

.text-center {
    text-align: center;
}

.row-spaced {
    margin-top: 20px;
    margin-bottom: 20px;
}

.img-center-wrapper {
    max-width: 200px;
    width: 50%;
}

.img-circle {
    border-radius: 50%;
}

.paper-padded {
    padding: 30px;
    padding-left: 30px !important;
}

.body-copy {
    display: inline-block;
    width: 90%;
    max-width: 500px;
}

.navlink-active>button {
    color: #FF9800 !important;
}

.faded {
    opacity: 0.7;
}

.project-icon {
    width: 1.5em;
    height: 1.5em;
    position: relative;
    bottom: 3px;
    padding: 1px;
    margin-right: 5px;
}

.project-screenshot {
    height: auto;
    width: auto;
    max-width: 100%;
    display: inline-block;
    vertical-align: middle;
    margin-left: auto;
    margin-right: auto;
    transition: max-width 0.5s ease;
    transition-delay: 0.5s;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 10px, rgba(0, 0, 0, 0.23) 0px 3px 10px;
}

.project-container {
    padding-bottom: 150px;
}

.container-padded {
    padding-top: 75px;
    padding-bottom: 150px;
}

.project-row {
    margin-top: 50px;
    margin-bottom: 50px;
    transition: all 0.5s ease;
}

.paper {
    max-width: calc(100vw - 20px);
}

.img-aligner {
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}

@media (max-width: 992px) {
    .project-screenshot {
        max-width: 0px;
        display: block;
        transition: max-width 0.5s ease;
    }
    .project-row {
        margin-top: 0px;
        margin-bottom: 0px;
        transition: all 0.5s ease;
    }
    .hidden-under-md {
        display: none;
    }
}

@media (max-width: 768px) {
    .hidden-under-sm {
        display: none;
    }
    .hidden-under-xs {
        display: none;
    }
}

@media (max-width: 507px) {
    .hidden-under-xxs {
        display: none;
    }
}

@media (min-width: 506px) {
    .hidden-above-xxs {
        display: none;
    }
}

@media (max-width: 412px) {
    .hidden-under-xxxs {
        display: none;
    }
}

.bottom-margin-lg {
    margin-bottom: 70px;
}

